--- a/REQ_s270206.md
+++ b/REQ_s270206.md
@@ -10,19 +10,18 @@ Matricola : s270206
 - [Context Diagram and interfaces](#context-diagram-and-interfaces)
 	+ [Context Diagram](#context-diagram)
 	+ [Interfaces](#interfaces) 
-	
-<!-- - [Stories and personas](#stories-and-personas)
+- [Stories and personas](#stories-and-personas)
 - [Functional and non functional requirements](#functional-and-non-functional-requirements)
 	+ [Functional Requirements](#functional-requirements)
 	+ [Non functional requirements](#non-functional-requirements)
-- [Use case diagram and use cases](#use-case-diagram-and-use-cases)
+<!-- - [Use case diagram and use cases](#use-case-diagram-and-use-cases)
 	+ [Use case diagram](#use-case-diagram)
 	+ [Use cases](#use-cases)
 	+ [Relevant scenarios](#relevant-scenarios)
 - [Glossary](#glossary)
 - [System design](#system-design)
-- [Deployment diagram](#deployment-diagram) -->
-
+- [Deployment diagram](#deployment-diagram)
+ -->
 # Abstract
 
 Nowadays the price of fuel per liter varies widely from gas station to an other. In fact, once the most convenient station is found, drivers no longer tend to change it, even if the price become no more convenient. 
@@ -44,11 +43,11 @@ EZGas was born from this idea, in fact it is a crowdsourcing service that allows
 
 <!-- ```plantuml
 @startuml
-left to right direction
-actor Driver as a
-actor "Map System" as ms
-a -- ( EZGas System )
-( EZGas System ) -- ms
+	left to right direction
+	actor Driver as a
+	actor "Map System" as ms
+	a -- ( EZGas System )
+	( EZGas System ) -- ms
 @enduml
 ``` -->
 
@@ -59,3 +58,37 @@ a -- ( EZGas System )
 | ---------- |:-------------------:| -------------------:|
 | Driver     |       GUI           | Screen, keyboard    |
 | Map System | Internet Connection |      API            |
+
+# Stories and personas
+
+Marco is a businessman living in Rome. His job forces him to drive around the city all day with his car and he has often to refuel. Thanks to EZGas, he is always able to find a closer and convenient gas station, without having to remember the price of the various stations every time. While refueling, he checks if the price on the application is updated and if it isn't, he updates it.
+
+Julia is on vacation in Rome. During these days she decides to take a rental car to visit the city. Since she doesn't know the city and is afraid of wasting too much time and money looking for gas stations, she searches on EZGas for those that were most comfortable to reach, comparing the prices they practice. Fortunately, she immediately finds a very convenient station, thanks to Marco who have just updated the price.
+
+George is gas station manager in London and he was really worried for his job becouse his activity was not very known in his area. He found EZGas and by seeing the nearby stations, finally realized that he should lower the price to be more competitive. Now in George's gas station there are many customers queuing to refuel and he is always up to date to the price of competitors in his area.
+
+# Functional and non functional requirements
+
+## Functional Requirements
+
+| ID        | Description  |
+| ------------- |:-------------:| 
+|  FR1     | Manage a user account |  
+|  FR2     | Log in |
+|  FR3     | Log out |
+|  FR4     | Visualize a map considering the user's location |
+|  FR5     | Handle highlighting of the gas stations in the map with the price they pratice |
+|  FR6     | Manage gas station selection and guide the user there |
+|  FR7     | Manage update of the map of gas stations prices |
+|  FR8     | Handle adding or updating of a gas station price |
+
+## Non Functional Requirements
+
+| ID        | Type (efficiency, reliability, .. see iso 9126)           | Description  | Refers to |
+| ------------- |:-------------:| :-----:| -----:|
+|  NFR1     | Usability | Application should be used with no training by any user  | All FR |
+|  NFR2     | Efficiency | Functions should complete in < 2 sec  | FR4 - FR7 |
+|  NFR3     | Efficiency | Functions should complete in < 0.5 sec  | All remaining FR |
+|  NFR4     | Portability | The application runs on Android ( 5.0 or recent ) | All FR |
+|  NFR5     | Portability | User's data should be loaded on login on different devices | FR2 |
+
