--- a/REQ_s270206.md
+++ b/REQ_s270206.md
@@ -57,6 +57,7 @@ EZGas was born from this idea, in fact it is a crowdsourcing service that allows
 |  Actor     | Logical Interface   | Physical Interface  |
 | ---------- |:-------------------:| -------------------:|
 | Driver     |       GUI           | Screen, keyboard    |
+| Gas Station Manager     |       GUI           | Screen, keyboard    |
 | Map System | Internet Connection |      API            |
 
 # Stories and personas
@@ -91,4 +92,3 @@ George is gas station manager in London and he was really worried for his job be
 |  NFR3     | Efficiency | Functions should complete in < 0.5 sec  | All remaining FR |
 |  NFR4     | Portability | The application runs on Android ( 5.0 or recent ) | All FR |
 |  NFR5     | Portability | User's data should be loaded on login on different devices | FR2 |
-
