--- a/REQ_s270206.md
+++ b/REQ_s270206.md
@@ -14,14 +14,11 @@ Matricola : s270206
 - [Functional and non functional requirements](#functional-and-non-functional-requirements)
 	+ [Functional Requirements](#functional-requirements)
 	+ [Non functional requirements](#non-functional-requirements)
-<!-- - [Use case diagram and use cases](#use-case-diagram-and-use-cases)
+- [Use case diagram and use cases](#use-case-diagram-and-use-cases)
 	+ [Use case diagram](#use-case-diagram)
 	+ [Use cases](#use-cases)
 	+ [Relevant scenarios](#relevant-scenarios)
-- [Glossary](#glossary)
-- [System design](#system-design)
-- [Deployment diagram](#deployment-diagram)
- -->
+
 # Abstract
 
 Nowadays the price of fuel per liter varies widely from gas station to an other. In fact, once the most convenient station is found, drivers no longer tend to change it, even if the price become no more convenient. 
@@ -74,14 +71,14 @@ George is gas station manager in London and he was really worried for his job be
 
 | ID        | Description  |
 | ------------- |:-------------:| 
-|  FR1     | Manage a user account |  
+|  FR1     | Manage driver user account | 
 |  FR2     | Log in |
 |  FR3     | Log out |
-|  FR4     | Visualize a map considering the user's location |
+|  FR4     | Handle view a map considering the user's location |
 |  FR5     | Handle highlighting of the gas stations in the map with the price they pratice |
-|  FR6     | Manage gas station selection and guide the user there |
-|  FR7     | Manage update of the map of gas stations prices |
-|  FR8     | Handle adding or updating of a gas station price |
+|  FR6     | Handle update of the map of gas stations prices |
+|  FR7     | Handle adding of a gas station price |
+|  FR8     | Handle updating of a gas station price |
 
 ## Non Functional Requirements
 
@@ -92,3 +89,103 @@ George is gas station manager in London and he was really worried for his job be
 |  NFR3     | Efficiency | Functions should complete in < 0.5 sec  | All remaining FR |
 |  NFR4     | Portability | The application runs on Android ( 5.0 or recent ) | All FR |
 |  NFR5     | Portability | User's data should be loaded on login on different devices | FR2 |
+
+# Use case diagram and use cases
+
+## Use case diagram
+
+<!-- ```plantuml
+@startuml
+left to right direction
+actor Driver as d
+actor "Gas Station Manager" as gsm
+actor "Map System" as ms
+d -- (FR1 Manage user account)
+(FR1 Manage user account) -- (FR1.1 Create user) : <<include>>
+(FR1 Manage user account) -- (FR1.2 Edit user) : <<include>>
+(FR1 Manage user account) -- (FR1.3 Delete user) : <<include>>
+d -- (FR4 Handle view a map considering the user's location)
+d -- (FR5 Handle highlighting of the gas stations in the map with the price they pratice)
+d -- (FR6 Handle update of the map of gas stations prices )
+d -- (FR7 Handle adding of a gas station price )
+(FR7 Handle adding of a gas station price ) <|-- (FR8 Handle updating of a gas station price) : <<extend>>
+gsm -- (FR4 Handle view a map considering the user's location)
+gsm -- (FR5 Handle highlighting of the gas stations in the map with the price they pratice)
+(FR4 Handle view a map considering the user's location) -- ms
+@enduml
+``` -->
+
+![Class Diagram](http://www.plantuml.com/plantuml/proxy?src=https://raw.githubusercontent.com/alericciuto/SELabs/master/UCD.puml)
+
+## Use Cases
+
+### Use case 1, UC1 - FR1  Manage user account
+
+| Actors Involved        | Driver |
+| ------------- |:-------------:| 
+|  Precondition     | |  
+|  Post condition     | |
+|  Nominal Scenario     | Inserts, modifies, deletes personal info by using credentials |
+|  Variants     | Unique account. If already one exists while creating, issue warning |
+
+### Use case 2, UC2 - FR4 Handle view a map considering the user's location
+
+| Actors Involved        | Driver, Gas Station Manager |
+| ------------- |:-------------:| 
+|  Precondition     | Internet Connection enabled, GPS enabled |  
+|  Post condition     | |
+|  Nominal Scenario     | Navigates the map in the application from his GPS position |
+|  Variants     |  |
+
+### Use case 3, UC3 - FR5 Handle highlighting of the gas stations in the map with the price they pratice
+
+| Actors Involved        | Driver, Gas Station Manager |
+| ------------- |:-------------:| 
+|  Precondition     | Internet Connection enabled, GPS enabled |  
+|  Post condition     | GasStation.selected == true |
+|  Nominal Scenario     | Highlight point on the map by typing on a gas station |
+|  Variants     |  |
+
+### Use case 4, UC4 - FR6 Handle update of the map of gas stations prices
+
+| Actors Involved        | Driver, Gas Station Manager |
+| ------------- |:-------------:| 
+|  Precondition     | Internet Connection enabled, GPS enabled |  
+|  Post condition     | |
+|  Nominal Scenario     | By typing on refresh, prices on the map will be updated |
+|  Variants     |  |
+
+### Use case 5, UC5 - FR7 Handle adding of a gas station price
+
+| Actors Involved        | Driver  |
+| ------------- |:-------------:| 
+|  Precondition     | Element.isGasStation |  
+|  Post condition     |  |
+|  Nominal Scenario     | Selects a gas station on the map and adds a price |
+|  Variants     | update a gas station price (FR8) |
+
+# Relevant scenarios
+
+## Scenario 1
+
+| Scenario ID: SC1        | Corresponds to UC5  |
+| ------------- |:-------------| 
+| Description | Insert new gas station price |
+| Precondition | Driver login |
+| Postcondition | Gas station price inserted |
+| Step#        |  Step description   |
+|  1     | Driver selects gas station |  
+|  2     | Driver chooses a price to insert |
+|  3     | Driver confirms insertion |
+
+## Scenario 2
+
+| Scenario ID: SC2        | Corresponds to UC5  |
+| ------------- |:-------------| 
+| Description | Update gas station price |
+|Precondition | Driver login |
+|Postcondition | Gas station price updated |
+| Step#        | Step description  |
+|  1     | Driver selects gas station |  
+|  2     | Driver chooses a new price to insert |
+|  3     | Driver confirms udpating  |
